--- a/rush/index.html
+++ b/rush/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!--เวบย่อขยายตามขนาดหน้าจอ-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piscine Discovery - Rush</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="home-body">
+    <!--พื้นหลังใหญ่-->
     <div class="bg-hero">
+        <!--ให้ทุกอย่างยุกลางจอ-->
         <div class="container">
             <div class="home-glass-card mx-auto">
                 <h1 class="display-3 fw-bold mb-4">แฟ้มสะสมผลงานของพวกเรา</h1>
